[gd_scene load_steps=2 format=3 uid="uid://bqx8y2htiqk"]

[ext_resource type="Script" uid="uid://6n4y0j8p453n" path="res://Scripts/WorldScripts/settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MainContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MainContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "X"
flat = true

[node name="TabContainer" type="TabContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Controls" type="ScrollContainer" parent="MainContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ControlsVBox" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="ControlsTitle" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Keybindings"
horizontal_alignment = 1

[node name="KeybindingsContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LeftBinding" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer"]
layout_mode = 2

[node name="LeftLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/LeftBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Left:"

[node name="LeftButton" type="Button" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/LeftBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "A"

[node name="RightBinding" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer"]
layout_mode = 2

[node name="RightLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/RightBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Right:"

[node name="RightButton" type="Button" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/RightBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "D"

[node name="JumpBinding" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer"]
layout_mode = 2

[node name="JumpLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/JumpBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jump:"

[node name="JumpButton" type="Button" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/JumpBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Space"

[node name="CrouchBinding" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer"]
layout_mode = 2

[node name="CrouchLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/CrouchBinding"]
layout_mode = 2
text = "Crouch:"

[node name="Button" type="Button" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/CrouchBinding"]
layout_mode = 2
text = "S"

[node name="DigBinding" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer"]
layout_mode = 2

[node name="DigLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/DigBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dig:"

[node name="DigButton" type="Button" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/DigBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse2"

[node name="HitBinding" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer"]
layout_mode = 2

[node name="HitLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/HitBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shoot:"

[node name="HitButton" type="Button" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox/KeybindingsContainer/HitBinding"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse1"

[node name="ResetKeybindingsButton" type="Button" parent="MainContainer/VBoxContainer/TabContainer/Controls/ControlsVBox"]
layout_mode = 2
text = "Reset to Defaults"

[node name="Video" type="ScrollContainer" parent="MainContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VideoVBox" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Video"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="VideoTitle" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox"]
layout_mode = 2
text = "Video Settings"
horizontal_alignment = 1

[node name="VideoSettingsContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FullScreenContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer"]
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer/FullScreenContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen:"

[node name="FullScreenCheckBox" type="CheckBox" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer/FullScreenContainer"]
layout_mode = 2

[node name="ScreenShakeContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer"]
layout_mode = 2

[node name="ScreenShakeLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer/ScreenShakeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Screen Shake:"

[node name="ScreenShakeCheckBox" type="CheckBox" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer/ScreenShakeContainer"]
layout_mode = 2
button_pressed = true

[node name="ResolutionContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution:"

[node name="ResolutionOptionButton" type="OptionButton" parent="MainContainer/VBoxContainer/TabContainer/Video/VideoVBox/VideoSettingsContainer/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Audio" type="ScrollContainer" parent="MainContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="AudioVBox" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="AudioTitle" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Audio Settings"
horizontal_alignment = 1

[node name="AudioSettingsContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MasterVolumeContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer/MasterVolumeContainer"]
layout_mode = 2
text = "Master Volume: 100%"

[node name="MasterVolumeSlider" type="HSlider" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer/MasterVolumeContainer"]
layout_mode = 2
value = 100.0

[node name="SFXVolumeContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer/SFXVolumeContainer"]
layout_mode = 2
text = "SFX Volume: 100%"

[node name="SFXVolumeSlider" type="HSlider" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer/SFXVolumeContainer"]
layout_mode = 2
value = 100.0

[node name="MusicVolumeContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Music Volume: 100%"

[node name="MusicVolumeSlider" type="HSlider" parent="MainContainer/VBoxContainer/TabContainer/Audio/AudioVBox/AudioSettingsContainer/MusicVolumeContainer"]
layout_mode = 2
value = 100.0

[node name="Gameplay" type="ScrollContainer" parent="MainContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="GameplayVBox" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="GameplayTitle" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox"]
layout_mode = 2
text = "Gameplay Settings"
horizontal_alignment = 1

[node name="GameplaySettingsContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DifficultyContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox/GameplaySettingsContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox/GameplaySettingsContainer/DifficultyContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty:"

[node name="DifficultyOptionButton" type="OptionButton" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox/GameplaySettingsContainer/DifficultyContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AutoSaveContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox/GameplaySettingsContainer"]
layout_mode = 2

[node name="AutoSaveLabel" type="Label" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox/GameplaySettingsContainer/AutoSaveContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Auto Save:"

[node name="AutoSaveCheckBox" type="CheckBox" parent="MainContainer/VBoxContainer/TabContainer/Gameplay/GameplayVBox/GameplaySettingsContainer/AutoSaveContainer"]
layout_mode = 2
button_pressed = true

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="ApplyButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"
